labs/aws/mythical-eks/kubernetes/monolith-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: mythical-mysfits-eks
 namespace: default
 labels:
   app: mythical-mysfits-eks
spec:
 replicas: 2
 selector:
   matchLabels:
     app: mythical-mysfits-eks
 template:
   metadata:
     labels:
       app: mythical-mysfits-eks
   spec:
     serviceAccount: mythical-misfit
     containers:
       - name: mythical-mysfits-eks
         image: 624148956508.dkr.ecr.ap-northeast-1.amazonaws.com/mythical:latest
         imagePullPolicy: Always
         ports:
           - containerPort: 80
             protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
 name: mythical-mysfits-eks
 namespace: default
spec:
 type: LoadBalancer
 selector:
   app: mythical-mysfits-eks
 ports:
 -  protocol: TCP
    port: 80
    targetPort: 80
